@@ -1,5 +1,6 @@
 export(Rd2rst)
 export(Rd2myst)
+export(weave_examples)
 importFrom(stringi,stri_dup)
 importFrom(stringi,stri_flatten)
 importFrom(stringi,stri_match_first_regex)
@@ -8,3 +9,6 @@ importFrom(stringi,stri_detect_fixed)
 importFrom(stringi,stri_replace_all_regex)
 importFrom(stringi,stri_replace_first_regex)
 importFrom(stringi,stri_length)
+importFrom(stringi,stri_replace_first_fixed)
+importFrom(stringi,stri_replace_last_fixed)
+importFrom(knitr,knit)
